--- a/src/components/frontPage/frontPage.scss
+++ b/src/components/frontPage/frontPage.scss
@@ -3,37 +3,25 @@
 }
 
 .think {
-  padding-top: 50px;
+  margin-top: 20px;
+  padding-top: 20px;
   display: flex;
+  justify-content: space-between;
   background-color: black;
-}
-@media (max-width: 450px) {
-  .think {
-    display: block;
-  }
-}
-
-.lottie {
-  margin-right: 100px;
-}
-@media (max-width: 450px) {
-  .lottie {
-    padding-bottom: 20px;
-  }
 }
 
 .frontLogo {
   align-items: center;
   justify-content: center;
-}
-
-.frontLogo h3 {
-  padding-left: 60px;
-  padding-right: 250px;
-  font-family: sans-serif;
-  text-align: center;
-  color: white;
-  font-size: 100px;
+  h3 {
+    padding-left: 60px;
+    padding-right: 250px;
+    margin-top: 60px;
+    font-family: sans-serif;
+    text-align: center;
+    color: white;
+    font-size: 100px;
+  }
 }
 
 .frontLogo span:before {
@@ -61,16 +49,22 @@
   }
 }
 
+.lottie {
+  margin-right: 100px;
+  margin-bottom: 20px;
+}
+
 .middlePage {
   background: #dbdbdb;
 }
 
 .middleText {
-  font-family: "Montserrat", sans-serif;
-  // font-family: 'Open Sans', sans-serif;
+  padding-top: 12px !important;
   margin-left: 100px;
-  font-size: 42px;
-  padding-top: 12px;
+  h3 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 45px !important;
+  }
 }
 
 .middlePic {
@@ -78,22 +72,6 @@
   margin-top: 80px;
   padding-bottom: 55px;
   justify-content: center;
-}
-@media (max-width: 450px) {
-  .middleText {
-    margin-left: 10px;
-  }
-
-  .middlePic {
-    display: grid;
-    margin-right: 40px;
-    grid-template-columns: repeat(2, 2fr);
-    grid-row-gap: 20px;
-  }
-
-  .mid {
-    margin-left: 70px;
-  }
 }
 
 .middleQuote {
@@ -106,9 +84,7 @@
 }
 
 .middleQuote h3 {
-  margin-top: 50px;
-  margin-right: 20px;
-  margin-left: 20px;
+  margin: 50px 20px;
   text-align: center;
 }
 
@@ -116,15 +92,15 @@
   background: black;
   color: white;
   font-family: sans-serif;
-  padding-top: 20px;
+  padding-top: 50px;
   padding-bottom: 100px;
   margin-top: 40px;
   font-size: 20px;
-}
-
-.features > h3 {
-  font-size: 40px;
-  text-align: center;
+  h3 {
+    font-size: 40px;
+    padding-bottom: 20px;
+    text-align: center;
+  }
 }
 
 .features_pics {
@@ -132,22 +108,22 @@
   display: grid;
   grid-template-columns: repeat(3, 410px);
   grid-gap: 10px;
-}
-
-.features-pics > img {
-  border-radius: 10px;
-  width: 400px;
-  height: 200px;
+  img {
+    border-radius: 10px;
+    width: 400px;
+    height: 230px;
+  }
 }
 
 @media (max-width: 450px) {
   .features {
     margin-top: 20px;
     padding-bottom: 40px;
+    h3 {
+      font-size: 30px;
+    }
   }
-  .features > h3 {
-    font-size: 30px;
-  }
+
   .features-pics {
     display: block;
   }
