--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,48 +3,46 @@
   color: white;
 }
 
+.nav_item {
+  display: flex;
+  align-items: center;
+  background-color: black;
+}
+
 .title {
   color: white;
   text-decoration: none;
-}
-
-.front__title {
-  display: flex;
-  align-items: center;
-}
-
-nav {
-  background: black;
+  h1 {
+    padding-top: 10px;
+    font-size: 25px !important;
+  }
 }
 
 .nav_links {
   display: flex;
   list-style: none;
   width: 50%;
-  height: 100%;
   justify-content: space-around;
   align-items: center;
   margin-left: auto;
   text-decoration: none;
+
+  padding-top: 15px !important;
 }
 
 .non span {
-  text-decoration: none;
+  font-size: 20px;
+  text-decoration: none !important;
   color: white;
 }
 
-// .nav-links li span {
-//   color: white;
-//   text-decoration: none;
-//   font-size: 25px;
-// }
-
-// .nav-links > li > a:hover {
-//   color: grey;
-// }
+.non span:hover {
+  color: grey;
+  margin-top: 6px !important;
+}
 
 //   768
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 650px) {
   .header {
     display: none;
   }
