--- a/src/components/frontPage/frontPage.scss
+++ b/src/components/frontPage/frontPage.scss
@@ -59,9 +59,9 @@
 }
 
 .middleText {
-  padding-top: 12px !important;
   margin-left: 100px;
   h3 {
+    padding-top: 70px !important;
     font-family: "Montserrat", sans-serif;
     font-size: 45px !important;
   }
@@ -89,13 +89,12 @@
 }
 
 .features {
-  background: black;
+  background: #273036;
   color: white;
   font-family: sans-serif;
-  padding-top: 50px;
-  padding-bottom: 100px;
-  margin-top: 40px;
-  font-size: 20px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  font-size: 30px;
   h3 {
     font-size: 40px;
     padding-bottom: 20px;
